@@ -11,8 +11,8 @@
  * @author Wrzasq <wrzasq@gmail.com>
  * @copyright 2007 - 2008 (C) by Wrzasq
  * @license http://www.gnu.org/licenses/lgpl-3.0.txt GNU Lesser General Public License, Version 3
- * @todo future: Use fetchObject() to reduce amount of SQL queries.
  * @todo future: Iterator classes (to map id => name iterations) with tutorial.
+ * @todo 0.2.0: Use fetchObject() to reduce amount of SQL queries.
  */
 
 /**
