@@ -94,6 +94,7 @@ class OTS_DB_MySQL extends OTS_Base_DB
 
         // PDO constructor
         parent::__construct('mysql:' . implode(';', $dns), $user, $password);
+/// FIXME: 0.2.0        $this->setAttribute(PDO::MYSQL_ATTR_USE_BUFFERED_QUERY, true);
     }
 
 /**
