@@ -1,5 +1,6 @@
 [0.1.6+SVN]
 * Updated OTAdmin client (server saving and opening). <wrzasq>
+* Updated binay format support. <wrzasq>
 * Bugfixes. <wrzasq>
 
 [0.1.5]
